--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -411,7 +411,7 @@ h6,
   color: #fac51c;
 }
 .scrollToTop_wraper {
-  opacity: 0 !important;
+  display: none;
 }
 #menu-0 .hide-buttons .nav-btn {
   display: none !important;
